--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "scripts": {
-    "postinstall": "(cd client && npm install) && (cd ../server && npm install)",
+    "postinstall": "cd client && npm install && cd ../server && npm install",
     "prepare": "husky install"
   },
   "devDependencies": {
