--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "test:pp": "cross-env CI=true react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -45,5 +46,9 @@
     "transformIgnorePatterns": [
       "node_modules/(?!axios)"
     ]
+  },
+  "devDependencies": {
+    "axios-mock-adapter": "^1.21.5",
+    "cross-env": "^7.0.3"
   }
 }
